# nebula

./: .gitignore  README.md
agent_sdk/: Cargo.toml  NPU_HAL_README.md
agent_sdk/examples/: apple_neural_engine_demo.rs  npu_demo.rs  simple_agent.rs
agent_sdk/src/: agent.rs  lib.rs  message.rs  ml.rs  runtime.rs  types.rs
agent_sdk/src/npu/: capabilities.rs  device.rs  hal.rs  mock.rs  mod.rs  scheduler.rs  types.rs
agent_sdk/src/npu/drivers/: apple_neural_device.rs  apple_neural_engine.rs  apple_neural_hal.rs  mod.rs
agents/agentd/: Cargo.toml
agents/agentd/src/: agent.rs  main.rs  types.rs
agents/filesystem_agent/: Cargo.toml  simple_file_access_predictor.onnx  simple_model_info.json
agents/filesystem_agent/examples/: test_ml.rs
agents/filesystem_agent/src/: filesystem.rs  lib.rs  main.rs  predictor.rs  types.rs
milestones/: 1_concept_milestone.md  2_filesystem_agent.md  3_onnx_fs_agent.md  4_agent_sdk_prototype.md  5_npu_hal_foundation.md
