[package]
name = "nebula_agent_sdk"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["NebulaOS Team"]
description = "NebulaOS Agent SDK - Easy framework for building AI agents"

[lib]
name = "nebula_agent_sdk"
path = "src/lib.rs"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

# AI/ML dependencies
ort = { version = "1.16", features = ["load-dynamic"], optional = true }
ndarray = { version = "0.15", optional = true }

# NPU Hardware Abstraction Layer dependencies
libc = { version = "0.2", optional = true }
uuid = { version = "1.0", features = ["v4"], optional = true }
thiserror = { version = "1.0", optional = true }
rand = { version = "0.8", optional = true }

# Apple Neural Engine dependencies (macOS only)
objc2 = { version = "0.6.1", optional = true }
objc2-core-ml = { version = "0.3.1", optional = true }
objc2-foundation = { version = "0.3.1", optional = true }

# Redox system integration (optional)
redox-scheme = { version = "0.7.0", optional = true }
redox_syscall = { version = "0.5", optional = true }

# Image processing (for image classifier example)
image = { version = "0.24", optional = true }

# Text processing (for text processor example)
regex = { version = "1.0", optional = true }

[dev-dependencies]
tempfile = "3.0"
futures = "0.3"

[features]
default = ["ai", "npu"]
ai = ["ort", "ndarray"]  # Enable AI/ML capabilities
npu = ["libc", "uuid", "thiserror", "rand"]  # NPU Hardware Abstraction Layer
apple_neural_engine = ["npu", "objc2", "objc2-core-ml", "objc2-foundation"]  # Apple Neural Engine support
redox = ["redox-scheme", "redox_syscall"]  # Redox system integration
image_processing = ["image"]  # Image processing capabilities
text_processing = ["regex"]  # Text processing capabilities
examples = ["image_processing", "text_processing"]  # Enable example agents

# Examples
[[example]]
name = "npu_demo"
required-features = ["npu"]

[[example]]
name = "apple_neural_engine_demo"
required-features = ["npu", "apple_neural_engine"]

# Additional examples will be added later
# [[example]]
# name = "image_classifier"
# required-features = ["examples", "ai", "image_processing"]
# 
# [[example]]
# name = "text_processor"
# required-features = ["examples", "text_processing"]
# 
# [[example]]
# name = "simple_agent"
# required-features = ["ai"]
