[package]
name = "agentd"
version = "0.1.0"
edition = "2021"
description = "NebulaOS Agent Scheduler Daemon"
license = "MIT"

[dependencies]
# Core Redox dependencies (versions from Redox ipcd)
redox-daemon = { version = "0.1.2", optional = true }
redox-scheme = { version = "0.7.0", optional = true }
redox_syscall = { version = "0.5", optional = true }
redox_event = { version = "0.4.0", optional = true }
libredox = { version = "0.1.6", features = ["call"], optional = true }

# Standard dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
log = "0.4"
env_logger = "0.10"

# AI/ML dependencies
ort = { version = "1.16", optional = true }
ndarray = { version = "0.15", optional = true }
tokio = { version = "1.0", features = ["fs", "time", "macros"], optional = true }
notify = { version = "6.0", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

[features]
default = ["redox"]
redox = ["redox-daemon", "redox-scheme", "redox_syscall", "redox_event", "libredox"]
mock = ["ort", "ndarray", "tokio", "notify", "chrono"]  # AI features for development
ai = ["ort", "ndarray", "tokio", "notify", "chrono"]  # AI capabilities

[[bin]]
name = "agentd"
path = "src/main.rs"
