[package]
name = "filesystem_agent"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["NebulaOS Team"]
description = "Intelligent filesystem agent with ML-based prefetching"

[lib]
name = "filesystem_agent"
path = "src/lib.rs"

[dependencies]
# Core Redox dependencies (versions from Redox ipcd)
redox-daemon = { version = "0.1.2", optional = true }
redox-scheme = { version = "0.7.0", optional = true }
redox_syscall = { version = "0.5", optional = true }
redox_event = { version = "0.4.0", optional = true }
libredox = { version = "0.1.6", features = ["call"], optional = true }

# Standard dependencies
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# AI/ML dependencies
ort = { version = "1.16", features = ["load-dynamic"], optional = true }
ndarray = { version = "0.15", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
notify = { version = "6.0", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

# File system and monitoring
walkdir = { version = "2.5", optional = true }
lru = { version = "0.12", optional = true }

[features]
default = ["redox"]
redox = ["redox-daemon", "redox-scheme", "redox_syscall", "redox_event", "libredox"]
mock = ["ort", "ndarray", "tokio", "notify", "chrono", "walkdir", "lru"]
ai = ["ort", "ndarray", "tokio", "notify", "chrono", "walkdir", "lru"]
